--- a/PositionIn/Views/Messaging/PositionIn.ChatHistoryCell.xib
+++ b/PositionIn/Views/Messaging/PositionIn.ChatHistoryCell.xib
@@ -15,8 +15,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="287" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gm5-hf-zhP">
-                        <rect key="frame" x="52" y="16" width="167" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gm5-hf-zhP">
+                        <rect key="frame" x="52" y="17" width="161" height="20"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -24,8 +24,8 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                         </userDefinedRuntimeAttributes>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="270" misplaced="YES" text="Yesterday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUJ-Dx-J12">
-                        <rect key="frame" x="219" y="18" width="63" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="270" horizontalCompressionResistancePriority="1000" misplaced="YES" text="Yesterday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUJ-Dx-J12">
+                        <rect key="frame" x="218" y="18" width="64" height="17"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -42,10 +42,6 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                         </userDefinedRuntimeAttributes>
                     </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zCU-vb-lNZ">
-                        <rect key="frame" x="-84" y="94" width="68" height="97"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
                     <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUO-HG-vnr" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
                         <rect key="frame" x="10" y="10" width="32" height="32"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -74,7 +70,7 @@
                     <constraint firstItem="WUO-HG-vnr" firstAttribute="top" secondItem="hGU-Hz-3X8" secondAttribute="top" constant="10" id="LH7-o5-dyU"/>
                     <constraint firstAttribute="trailing" secondItem="XAD-5v-fHL" secondAttribute="trailing" constant="5" id="Lb7-22-409"/>
                     <constraint firstItem="XAD-5v-fHL" firstAttribute="top" secondItem="WUO-HG-vnr" secondAttribute="bottom" id="NZ2-Jq-Isk"/>
-                    <constraint firstItem="SUJ-Dx-J12" firstAttribute="leading" secondItem="Gm5-hf-zhP" secondAttribute="trailing" id="PnS-vO-uuH"/>
+                    <constraint firstItem="SUJ-Dx-J12" firstAttribute="leading" secondItem="Gm5-hf-zhP" secondAttribute="trailing" constant="5" id="PnS-vO-uuH"/>
                     <constraint firstItem="WUO-HG-vnr" firstAttribute="bottom" secondItem="pTt-Vo-D4i" secondAttribute="bottom" id="XEf-4r-nsR"/>
                     <constraint firstItem="SUJ-Dx-J12" firstAttribute="centerY" secondItem="Gm5-hf-zhP" secondAttribute="centerY" id="Z5U-L3-9si"/>
                     <constraint firstItem="SUJ-Dx-J12" firstAttribute="trailing" secondItem="XAD-5v-fHL" secondAttribute="trailing" id="bw9-HU-1FD"/>
